# mcal

./: Cargo.toml  PKGBUILD  README.md
src/: main.rs
