[package]
name = "mcal"
version = "0.8.6"
edition = "2021"
description = "A modern calendar with events management"
license = "MIT"
repository = "https://github.com/1mesles1/mcal"
readme = "README.md"

[dependencies]
chrono = "0.4"
sys-locale = "0.3"
rustyline = "14.0"
crossterm = "0.27"
ctrlc = "3.4"
